--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,11 @@
         "caughtErrorsIgnorePattern": "^_"
       }
     ],
-    "import/extensions": ["error", "never", { "json": "always" }],
+    "import/extensions": [
+      "error",
+      "never",
+      { "json": "always", "svelte": "always" }
+    ],
     "import/prefer-default-export": "off",
     "import/order": [
       "error",
