--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@sveltejs/kit": "^2.0.6",
+    "node-html-parser": "^6.1.12",
     "svelte": "^4.2.8",
     "svelte-markdown": "^0.4.1"
   },
