--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@sveltejs/kit": "^2.0.6",
     "node-html-parser": "^6.1.12",
     "svelte": "^4.2.8",
-    "svelte-markdown": "^0.4.1"
+    "svelte-markdown": "^0.4.1",
+    "visuals": "github:jaschaephraim/visuals"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
