--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "project": "./tsconfig.json",
     "extraFileExtensions": [".svelte"]
   },
-  "ignorePatterns": ["src/lib/visuals/*"],
+  "ignorePatterns": ["build/*"],
   "overrides": [
     {
       "files": ["./*.js"],
