--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
+    "format": "prettier --check ./src",
+    "lint": "eslint .",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint .",
-    "format": "prettier --check ./src"
+    "dev": "vite dev",
+    "build": "vite build",
+    "postbuild": "svelte-sitemap --domain https://jaschaephraim.com -i 404.html",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@sveltejs/kit": "^2.0.6",
@@ -46,6 +47,7 @@
     "svelte-check": "^3.6.2",
     "svelte-eslint-parser": "^0.33.1",
     "svelte-multicssclass": "^2.1.1",
+    "svelte-sitemap": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
