--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "scripts": {
+    "clean": "rm -rf .svelte-kit node_modules",
     "prepare": "husky install",
     "format": "prettier --check ./src",
     "lint": "eslint .",
